syntax = "proto3";

option go_package = "go-mongo/proto";
package players;

service PlayerService {
  rpc GetPlayers(GetPlayersRequest) returns (GetPlayersResponse) {}

  rpc AddPlayer(AddPlayerRequest) returns (AddPlayerResponse) {}
}

message GetPlayersRequest{

    string position=1;
    int64 salary=2;
    bool enabled=3;
    string sortby=4;
}

message GetPlayersResponse{
    repeated Player players=1;

    message Player{
        string id=1;
        string playerName=2;
        string position=3;
        int64 salary=4;
        bool enabled=5;
    }
}

message AddPlayerRequest{
    string playerName=1;
    string position=2;
    int64 salary=3;
    bool enabled=4;
}

message AddPlayerResponse{
    string message=1;
}